# NullCrypt

./: LICENSE  README.md
Builder/: CrypterBuilder.cs  Form1.Designer.cs  Form1.cs  Form1.resx  ShellcodeConverter.cs  Utils.cs  WindowsFormsApp2.csproj  WindowsFormsApp2.sln  packages.config
Builder/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
stub/: Cargo.toml  build.rs
stub/hash_macro/: Cargo.toml
stub/hash_macro/src/: lib.rs
stub/src/: main.rs
stub/src/common/: debug.rs  mod.rs  structs.rs  utils.rs
stub/src/crypto/: config.rs  decrypt.rs  extract.rs  mod.rs
stub/src/evasion/: defer.rs  fake_project.rs  junk.rs  mod.rs
stub/src/injection/: loader.rs  mod.rs  module_stomping.rs  trampoline.rs
stub/src/pe/: exports.rs  mod.rs
stub/src/process/: enumerate.rs  memory.rs  mod.rs  thread.rs
stub/src/syscall/: exports.rs  hellgates.asm  hellgates.rs  mod.rs  peb.rs  resolver.rs  ssn.rs
