[package]
name = "stub"
version = "0.1.0"
edition = "2024"

[dependencies]
hash_macro = { path = "./hash_macro" }

windows = {version = "0.62.2", features = [
    "Win32_System_Threading",  "Win32_System_Kernel",  "Win32_System_WindowsProgramming", 
    "Win32_System_SystemServices", "Win32_System_Diagnostics_Debug", "Win32_System_SystemInformation",
    "Wdk_Foundation", "Win32_Security", "Win32_Foundation"]}
    
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"

[build-dependencies]
cc = "1.2.49"